Update and rename test.js to test.html

--- a/static/js/test.html
+++ b/static/js/test.html
@@ -1,3 +1,5 @@
+<html>
+<script>
 function req(url) {
     let script = document.createElement('script');
     script.src = url;
@@ -17,3 +19,5 @@ function req(url) {
 }
 
 req('http://host1.dreamhack.games:20416/search?query=note');
+</script>
+</html>
