--- a/static/js/test.html
+++ b/static/js/test.html
@@ -18,6 +18,6 @@ function req(url) {
     document.head.appendChild(script);
 }
 
-req('http://host1.dreamhack.games:20416/search?query=note');
+req('http://host1.dreamhack.games:20416/search?query=dreamhack');
 </script>
 </html>
