--- a/static/js/test.html
+++ b/static/js/test.html
@@ -7,5 +7,6 @@
 	iframe.onload = ()=>{
 		result = iframe.contentWindow.frames.length;
 		console.log(result);
+		img.src = `https://uglumaa.request.dreamhack.games/${iframe.contentWindow.frames.length}`;
 	};
 </script>
