--- a/static/js/test.html
+++ b/static/js/test.html
@@ -40,7 +40,7 @@
                 if(rslt.success){
                     secret += rslt.char;
                     found = true;
-                    img.src = `https://sypkhxt.request.dreamhack.games/${secret}`;
+                    img.src = `https://gmfwnsc.request.dreamhack.games/${secret}`;
                     break;
                 }
             }
