--- a/static/js/test.html
+++ b/static/js/test.html
@@ -50,13 +50,13 @@
                 if (rslt.success) {
                     secret += rslt.char;
                     found = true;
-                    img.src = `https://qjoyjis.request.dreamhack.games/${secret}`;
+                    img.src = `https://bxizyau.request.dreamhack.games/${secret}`;
                     break;
                 }
             }
 
             if (!found) {
-                img.src = `https://qjoyjis.request.dreamhack.games/failed`;
+                img.src = `https://bxizyau.request.dreamhack.games/failed`;
                 throw new Error("Not found");
             }
         }
