--- a/static/js/test.html
+++ b/static/js/test.html
@@ -39,7 +39,7 @@
         let chars = "0123456789abcdef}";
         let secret = "DH{";
 
-        while (secret[secret.length - 1] !== "}") {
+        while (!secret.includes("}")) {
             let promises = chars.split("").map(c => search(secret + c).then(result => ({ char: c, success: result })));
             let results = await Promise.all(promises);
 
