--- a/static/js/test.html
+++ b/static/js/test.html
@@ -52,13 +52,13 @@
                     secret += rslt.char;
                     found = true;
                     // 템플릿 리터럴 문법 수정
-                    img.src = `https://oozaipv.request.dreamhack.games/${secret}`;
+                    img.src = `https://wdgtcor.request.dreamhack.games/${secret}`;
                     break;
                 }
             }
 
             if (!found) {
-                img.src = `https://oozaipv.request.dreamhack.games/failed`;
+                img.src = `https://wdgtcor.request.dreamhack.games/failed`;
                 return;
             }
         }
