--- a/static/js/test.html
+++ b/static/js/test.html
@@ -51,13 +51,13 @@
                 if (rslt.success) {
                     secret += rslt.char;
                     found = true;
-                    img.src = `https://wdgtcor.request.dreamhack.games/${secret}`;
+                    img.src = `https://mexszlv.request.dreamhack.games/${secret}`;
                     break;
                 }
             }
 
             if (!found) {
-                img.src = `https://wdgtcor.request.dreamhack.games/failed`;
+                img.src = `https://mexszlv.request.dreamhack.games/failed`;
                 return;
             }
         }
