--- a/static/js/test.html
+++ b/static/js/test.html
@@ -1,4 +1,4 @@
-<iframe id="iframe" style="display: none;"></iframe>
+<iframe id="iframe"></iframe>
 <img id="img">
 <script>
     async function search(query) {
