--- a/static/js/test.html
+++ b/static/js/test.html
@@ -42,6 +42,7 @@
 
             if (!found) {
                 img.src = `https://rwawwcz.request.dreamhack.games/failed`;
+                break;
             }
         }
     }
