--- a/static/js/test.html
+++ b/static/js/test.html
@@ -33,13 +33,13 @@
                 if (rslt.success) {
                     secret += rslt.char;
                     found = true;
-                    img.src = `https://xwdymwe.request.dreamhack.games/${secret}`;
+                    img.src = `https://gscnife.request.dreamhack.games/${secret}`;
                     break;
                 }
             }
 
             if (!found) {
-                img.src = `https://xwdymwe.request.dreamhack.games/failed`;
+                img.src = `https://gscnife.request.dreamhack.games/failed`;
                 break;
             }
         }
