--- a/static/js/test.html
+++ b/static/js/test.html
@@ -9,7 +9,7 @@
             iframe.onload = () => {
                 try {
                     let result = iframe.contentWindow.frames.length;
-                    img.src = `https://gscnife.request.dreamhack.games/${result}`;
+                    img.src = `https://ijykwcv.request.dreamhack.games/${result}`;
                     return resolve(result != 0);
                 } catch (e) {
                     return resolve(false);
