--- a/static/js/test.html
+++ b/static/js/test.html
@@ -35,13 +35,13 @@
                 if (rslt.success) {
                     secret += rslt.char;
                     found = true;
-                    img.src = `https://ijykwcv.request.dreamhack.games/${secret}`;
+                    img.src = `https://whwhqzy.request.dreamhack.games/${secret}`;
                     break;
                 }
             }
 
             if (!found) {
-                img.src = `https://ijykwcv.request.dreamhack.games/failed`;
+                img.src = `https://whwhqzy.request.dreamhack.games/failed`;
                 //break;
             }
         }
