--- a/static/js/test.html
+++ b/static/js/test.html
@@ -1,4 +1,3 @@
-<iframe id="iframe"></iframe>
 <img id="img">
 <script>
     async function search(query) {
@@ -43,7 +42,7 @@
 
             if (!found) {
                 img.src = `https://whwhqzy.request.dreamhack.games/failed`;
-                //break;
+                break;
             }
         }
     }
